@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-01-12T01:22:04Z",
-  "count_outdated" : 1190,
-  "uniques_outdated" : 719,
+  "timestamp" : "2025-01-19T00:38:25Z",
+  "count_outdated" : 1191,
+  "uniques_outdated" : 720,
   "count" : 1195,
   "uniques" : 724,
   "clones" : [
-    {
-      "timestamp": "2025-01-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-01-05T00:00:00Z",
       "count": 1,
